--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ layout: default
 
     <div class="img">      
 
-      <a href="{{ post.url }}"><img src="{{ post.image_path }}" /></a>
+      <a href="{{ post.url }}.html"><img src="{{ post.image_path }}" /></a>
         
       <br />
 
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url }}.html">{{ post.title }}</a>
 
       </a>
     </div>
